--- a/index.html
+++ b/index.html
@@ -125,25 +125,7 @@
             <span class="help-icon">?</span>
         </button>
 
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="footer-content">
-                <p>© 2025 Sergio Cavero. All rights reserved.</p>
-                <p>Developed with ❤️ by <strong>Sergio Cavero</strong></p>
-                <div class="footer-links">
-                    <a href="https://github.com/scaverod" target="_blank" rel="noopener noreferrer" title="GitHub Repository">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v 3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"></path>
-                        </svg>
-                    </a>
-                    <a href="https://www.linkedin.com/in/sergio-cavero" target="_blank" rel="noopener noreferrer" title="LinkedIn Profile">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.39v-1.2h-2.5v8.5h2.5v-4.74c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.74h2.5M6.5 8a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m1.5 1h-3V19h3V9z"></path>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </footer>
+
     </div>
 
     <!-- PANTALLA DE INFORMACIÓN -->
@@ -171,6 +153,14 @@
                 
                 <h3>⚙️ Algoritmo de Resolución</h3>
                 <p>Se utiliza un algoritmo denominado <strong>construcción GRASP</strong> (<em>Greedy Randomized Adaptive Search Procedure</em>). Este algoritmo combina estrategias voraces aleatorias para explorar múltiples soluciones. Consulta el <a href="https://link.springer.com/article/10.1007/BF01096763" target="_blank" rel="noopener noreferrer">paper académico sobre GRASP</a> para más detalles técnicos.</p>
+                
+                <div class="info-footer">
+                    <p>¿Quieres saber más?</p>
+                    <a href="documentacion.html" class="docs-btn">📚 Leer Documentación</a>
+                </div>
+            </div>
+            <div class="scroll-indicator" id="scroll-indicator">
+                <span class="arrow">↓</span>
             </div>
         </div>
     </div>
@@ -317,6 +307,26 @@
             </div>
         </div>
     </div>
+
+    <!-- FOOTER (FUERA DE SCREENS) -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p>© 2025 Sergio Cavero. All rights reserved.</p>
+            <p>Developed with ❤️ by <strong>Sergio Cavero</strong></p>
+            <div class="footer-links">
+                <a href="https://github.com/scaverod" target="_blank" rel="noopener noreferrer" title="GitHub Repository">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v 3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"></path>
+                    </svg>
+                </a>
+                <a href="https://www.linkedin.com/in/sergio-cavero" target="_blank" rel="noopener noreferrer" title="LinkedIn Profile">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.39v-1.2h-2.5v8.5h2.5v-4.74c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.74h2.5M6.5 8a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m1.5 1h-3V19h3V9z"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
