--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </div>
                         </button>
                         <button class="menu-btn type-btn" data-type="multiple">
-                            <div class="menu-icon">♾️</div>
+                            <div class="menu-icon">📦📦</div>
                             <div class="menu-text">
                                 <div class="menu-title">Múltiple</div>
                                 <div class="menu-desc">Puedes repetir artículos</div>
