Add theme selector functionality with dropdown and styles for improved user experience

--- a/index.html
+++ b/index.html
@@ -116,6 +116,24 @@
                     </div>
                 </div>
 
+                <div class="section">
+                    <h2 style="font-size: 0.95rem; margin-bottom: 10px;">Ámbito del Problema</h2>
+                    <button id="theme-selector-btn" class="theme-selector-btn">
+                        <span id="theme-display">🎲 Al azar</span>
+                        <span class="dropdown-arrow">▼</span>
+                    </button>
+                    <div id="theme-dropdown" class="theme-dropdown hidden">
+                        <button class="theme-option" data-theme="random">🎲 Al azar</button>
+                        <button class="theme-option" data-theme="office">🏢 Oficina</button>
+                        <button class="theme-option" data-theme="shopping">🛍️ Compra</button>
+                        <button class="theme-option" data-theme="travel">✈️ Viaje</button>
+                        <button class="theme-option" data-theme="gaming">🎮 Gaming</button>
+                        <button class="theme-option" data-theme="tech">💻 Tecnología</button>
+                        <button class="theme-option" data-theme="cooking">🍳 Cocina</button>
+                        <button class="theme-option" data-theme="library">📚 Biblioteca</button>
+                    </div>
+                </div>
+
                 <button id="start-btn" class="start-btn" disabled title="Selecciona el tipo de problema y la dificultad">Jugar</button>
             </div>
         </div>
