Add favicon link to enhance branding and user experience

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://scaverod.github.io/problema-mochila">
     
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    
     <!-- Title and Styles -->
     <title>Problema de la Mochila - Juego Interactivo | Algoritmo GRASP y Voraz</title>
     <link rel="stylesheet" href="styles.css">
