--- a/index.html
+++ b/index.html
@@ -121,24 +121,12 @@
 
                 <div class="section">
                     <h2 style="font-size: 0.95rem; margin-bottom: 10px;">Ámbito del Problema</h2>
-                    <button id="theme-selector-btn" class="theme-selector-btn" disabled title="Selecciona un tipo de problema primero">
+                    <button id="theme-selector-btn" class="theme-selector-btn" title="Selecciona un ámbito para el problema">
                         <span id="theme-display">🎲 Al azar</span>
-                        <span class="dropdown-arrow">▼</span>
                     </button>
-                    <div id="theme-dropdown" class="theme-dropdown hidden">
-                        <button class="theme-option" data-theme="random">🎲 Al azar</button>
-                        <button class="theme-option" data-theme="office">🏢 Oficina</button>
-                        <button class="theme-option" data-theme="shopping">🛍️ Compra</button>
-                        <button class="theme-option" data-theme="travel">✈️ Viaje</button>
-                        <button class="theme-option" data-theme="gaming">🎮 Gaming</button>
-                        <button class="theme-option" data-theme="tech">💻 Tecnología</button>
-                        <button class="theme-option" data-theme="cooking">🍳 Cocina</button>
-                        <button class="theme-option" data-theme="library">📚 Biblioteca</button>
-                        <button class="theme-option" data-theme="sports">⚽ Deportes</button>
-                    </div>
                 </div>
 
-                <button id="start-btn" class="start-btn" disabled title="Selecciona el tipo de problema y la dificultad">Jugar</button>
+                <button id="start-btn" class="start-btn" title="Selecciona el tipo de problema y la dificultad">Jugar</button>
             </div>
         </div>
 
@@ -147,6 +135,19 @@
             <span class="help-icon">?</span>
         </button>
 
+        <!-- Modal de selección de ámbito -->
+        <div id="theme-modal" class="theme-modal hidden">
+            <div class="theme-modal-backdrop"></div>
+            <div class="theme-modal-content">
+                <div class="theme-modal-header">
+                    <h2>Selecciona un Ámbito</h2>
+                    <button id="close-theme-modal" class="close-modal-btn">✕</button>
+                </div>
+                <div id="theme-options-container" class="theme-options-container">
+                    <!-- Los temas se llenarán dinámicamente con JavaScript -->
+                </div>
+            </div>
+        </div>
 
     </div>
 
